Add intelligent URL shortening for better QR codes
Features:
- LLM automatically removes tracking parameters from product URLs
- Keeps only essential parameters for product identification
- Removes utm_*, ref, tag, fbclid, gclid, mc_*, _ga, etc.
- Results in smaller, easier-to-scan QR codes
- Improves privacy by removing tracking identifiers

Implementation:
- Updated OpenAI prompt with URL shortening instructions
- Added examples and guidelines for parameter removal
- Updated UI hints in both English and German
- URL remains manually editable if user needs to adjust

Benefits:
- Smaller QR codes scan more reliably
- Better privacy (no tracking parameters)
- Cleaner product URLs

--- a/locales/en.json
+++ b/locales/en.json
@@ -27,7 +27,7 @@
       "supplierPlaceholder": "e.g. Miele",
       "urlLabel": "Product URL",
       "urlPlaceholder": "https://...",
-      "urlHint": "URL for QR code (automatically shortened, can be manually adjusted)",
+      "urlHint": "URL for QR code (tracking parameters automatically removed, can be manually adjusted)",
       "reorderLabel": "Safety Stock",
       "reorderPlaceholder": "1 package",
       "orderLabel": "Order Quantity",
