--- a/locales/de.json
+++ b/locales/de.json
@@ -27,7 +27,7 @@
       "supplierPlaceholder": "z.B. Miele",
       "urlLabel": "Produkt-URL",
       "urlPlaceholder": "https://...",
-      "urlHint": "URL für QR-Code (wird automatisch gekürzt, kann manuell angepasst werden)",
+      "urlHint": "URL für QR-Code (Tracking-Parameter werden automatisch entfernt, kann manuell angepasst werden)",
       "reorderLabel": "Sicherheitsbestand",
       "reorderPlaceholder": "1 Packung",
       "orderLabel": "Bestellmenge",
