Improve URL shortening UX with honest messaging and visual feedback
Changes:
1. Updated hint text to be more honest about URL shortening
   - English: "will try to shorten automatically, please check and adjust if needed"
   - German: "wird versucht automatisch zu kürzen, bitte prüfen und bei Bedarf anpassen"
   - Removed overpromising "automatically removed" language

2. Added visual feedback for long URLs (>50 characters)
   - Yellow background (#fef3c7) to draw attention
   - Orange border (#f59e0b) for clear indication
   - Highlights on both regular and focused states
   - Real-time checking as user types

3. Implementation details
   - popup.js: Added checkUrlLength() function
   - Checks on form population and user input
   - popup.css: Added .url-too-long styling
   - MAX_RECOMMENDED_LENGTH = 50 characters

This helps users identify when they need to manually shorten URLs
for better QR code generation.

--- a/locales/de.json
+++ b/locales/de.json
@@ -27,7 +27,7 @@
       "supplierPlaceholder": "z.B. Miele",
       "urlLabel": "Produkt-URL",
       "urlPlaceholder": "https://...",
-      "urlHint": "URL für QR-Code (Tracking-Parameter werden automatisch entfernt, kann manuell angepasst werden)",
+      "urlHint": "URL für QR-Code (wird versucht automatisch zu kürzen, bitte prüfen und bei Bedarf anpassen)",
       "reorderLabel": "Sicherheitsbestand",
       "reorderPlaceholder": "1 Packung",
       "orderLabel": "Bestellmenge",
