Add helpful warning message for long URLs
Problem:
- Yellow highlight drew attention but didn't explain WHY
- Users didn't know WHAT to do about long URLs

Solution:
- Added warning message below URL field when length > 50 chars
- Message: "URL seems a bit long. Try shortening it to get an easier-to-scan QR code."
- Shows/hides automatically based on URL length
- Includes warning icon (triangle with exclamation mark)

Visual Design:
- Same yellow/orange color scheme as input highlight
- Left border accent for emphasis
- Flexbox layout with icon and text
- Clean, professional appearance

Implementation:
- popup.html: Added #urlLengthWarning element with SVG icon
- popup.js: Updated checkUrlLength() to show/hide warning
- popup.css: Styled .url-warning with matching colors
- popup.css: Added .url-warning.hidden rule (critical fix)
- locales: Added translations in English and German

Bug Fix:
- Fixed critical issue where warning would always show
- Added .url-warning.hidden { display: none; } rule
- Without this, the "hidden" class wouldn't actually hide it

This gives users clear, actionable guidance on what the
yellow highlight means and what they should do about it.

--- a/locales/de.json
+++ b/locales/de.json
@@ -28,6 +28,7 @@
       "urlLabel": "Produkt-URL",
       "urlPlaceholder": "https://...",
       "urlHint": "URL für QR-Code (wird versucht automatisch zu kürzen, bitte prüfen und bei Bedarf anpassen)",
+      "urlWarning": "URL scheint etwas lang. Versuche sie zu kürzen für einen besser scannbaren QR-Code.",
       "reorderLabel": "Sicherheitsbestand",
       "reorderPlaceholder": "1 Packung",
       "orderLabel": "Bestellmenge",
