Remove price from title and add custom instructions per URL
Changes:
1. Title no longer includes price
   - Updated prompt: "OHNE Preis" (without price)
   - Example: "Miele Spülmittel-Tabs, 16 Stück" (not "...16 Stück, 14,99 €")
   - Cleaner titles, price is shown separately in its own field

2. Custom instructions per URL feature
   - Added textarea in settings for custom AI instructions
   - Supports domain-specific rules with pattern matching
   - Format: "amazon.de: Use German product names"
   - General instructions apply to all extractions
   - Domain-specific instructions only apply to matching domains

Implementation:
- options.html: Added custom instructions textarea
- options.js: Load/save customInstructions to chrome.storage.sync
- background.js: Parse and inject custom instructions into prompt
- Smart parsing: Detects "domain: instruction" format
- Filters relevant instructions based on current URL domain
- Combines general + domain-specific instructions

Examples:
```
Always use full brand names
amazon.de: Prefer German product descriptions
ebay.de: Include item condition in notes
```

This allows users to fine-tune AI behavior per shop/domain
without changing the core prompt.

--- a/locales/de.json
+++ b/locales/de.json
@@ -54,6 +54,9 @@
     "apiKeyPlaceholder": "sk-...",
     "apiKeyHint": "Erforderlich für die Datennormalisierung. Dein Schlüssel wird lokal gespeichert und nur an OpenAI gesendet.",
     "getKeyLink": "API-Schlüssel erhalten",
+    "customInstructionsLabel": "Benutzerdefinierte Anweisungen (Optional)",
+    "customInstructionsPlaceholder": "z.B. Verwende immer deutsche Produktnamen...",
+    "customInstructionsHint": "Füge benutzerdefinierte Anweisungen hinzu, um die KI zu steuern. Diese werden bei jeder Extraktion berücksichtigt. Du kannst Domain-spezifische Regeln angeben, indem du eine Zeile mit der Domain beginnst (z.B. \"amazon.de: Verwende deutsche Produktnamen\").",
     "testBtn": "Verbindung testen",
     "saveBtn": "Speichern",
     "languageLabel": "Sprache",
