--- a/locales/en.json
+++ b/locales/en.json
@@ -54,6 +54,9 @@
     "apiKeyPlaceholder": "sk-...",
     "apiKeyHint": "Required for data normalization. Your key is stored locally and only sent to OpenAI.",
     "getKeyLink": "Get API Key",
+    "customInstructionsLabel": "Custom Instructions (Optional)",
+    "customInstructionsPlaceholder": "e.g., Always include the supplier's name in German...",
+    "customInstructionsHint": "Add custom instructions to guide the AI. These will be included in every extraction. You can specify domain-specific rules by starting a line with the domain (e.g., \"amazon.de: Use German product names\").",
     "testBtn": "Test Connection",
     "saveBtn": "Save",
     "languageLabel": "Language",
